[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yoloimporter"
description = "import directly from PyPI"
authors = [{name = "Jeremiah Paige", email = "ucodery@gmail.com"}]
license = {file = "LICENSE.txt"}
readme = {file = "README.md", content-type = "text/markdown"}
classifiers = ["License :: OSI Approved :: BSD License"]
dynamic = ["version"]
dependencies = ["pip"]

[project.urls]
Home = "https://github.com/ucodery/yoloimporter"

[tool.hatch.version]
path = "yoloimporter/__init__.py"

[tool.hatch.envs.test.scripts]
integration = "python -m unittest test/test_integration.py"

[tool.hatch.envs.lint]
dependencies = ["ruff"]

[tool.hatch.envs.lint.scripts]
ruff-check = "ruff check ."
ruff-format = "ruff format ."

[tool.ruff.format]
quote-style = "single"
